--- a/templates/basic.html
+++ b/templates/basic.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.1/tiny-slider.css">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    {% if user.is_authenticated %}
+     <link rel="stylesheet" href="{% static 'css/admin.css' %}">
+    {% endif %}
 </head>
 <body>
 
