--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -91,3 +91,8 @@
 .small-delete:hover{
     box-shadow: 0px 3px 5px 0px black;
 }
+.previewImgDiv{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
