--- a/templates/header.html
+++ b/templates/header.html
@@ -16,7 +16,7 @@
         </div>
         <div class="top-menu-buttons">
             <a href="#" onclick="openModal();return false;" class="btn">сделать заказ</a>
-            <a href="#"><img src="{% static 'img/top-phone.png' %}" alt=""></a>
+            <a href="tel:+78123096033"><img src="{% static 'img/top-phone.png' %}" alt=""></a>
             <a id="mobile-toggle" href="#"><span>&#9776;</span></a>
 
         </div>
