--- a/templates/item.html
+++ b/templates/item.html
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="breadcrumbs mb30">
             <ul>
-                <li><a href="#">Главная</a></li>
+                <li><a href="{% url 'index' %}">Главная</a></li>
                 <li><a href="{% url 'portfolio' %}">Портфолию</a></li>
                 <li><a href="{% url 'portfolio_cat' category.name_slug %}">{{ category.name }}</a></li>
                 <li>{{ item.name }}</li>
