--- a/templates/services.html
+++ b/templates/services.html
@@ -6,7 +6,7 @@
         <div class="container">
             <div class="breadcrumbs mb30">
                 <ul>
-                    <li><a href="/">Главная</a></li>
+                    <li><a href="{% url 'index' %}">Главная</a></li>
                     <li>Услуги</li>
                 </ul>
             </div>
