--- a/templates/editmodal.html
+++ b/templates/editmodal.html
@@ -2,8 +2,18 @@
     <div id="modal-content" class="editmodal-content">
         <textarea style="width: 100%" id="editor"></textarea>
         <div style="margin: 20px">
+             <input id="uploadImg"  type="file" onchange="uploadImg(this)"  class="edit-info-file">
+                <label style="background: #655d5d;
+                                        padding: 10px;
+                                        display: inline-block;
+                                        margin-bottom: 20px;
+                                        border-radius: 21px;
+                                        color: #fff;" for="uploadImg"  >
+                    Загрузить картинку
+                </label>
             <a class="btn" style="margin-bottom: 30px" id="sendData" data-target="" href="javascript:void(0)" onclick="sendData()">сохранить</a>
             <a class="btn" href="javascript:void(0)" onclick="closeEditModal()">отмена</a>
         </div>
+          <p style="display: none" id="uploadSuccess">Картинка загружена. Используйте этот путь, что вставить картинку в текст: <strong><span id="imgUrl"></span></strong></p>
     </div>
 </div>
