--- a/templates/editmodal.html
+++ b/templates/editmodal.html
@@ -14,6 +14,6 @@
             <a class="btn" style="margin-bottom: 30px" id="sendData" data-target="" href="javascript:void(0)" onclick="sendData()">сохранить</a>
             <a class="btn" href="javascript:void(0)" onclick="closeEditModal()">отмена</a>
         </div>
-          <p style="display: none" id="uploadSuccess">Картинка загружена. Используйте этот путь, что вставить картинку в текст: <strong><span id="imgUrl"></span></strong></p>
+          <p style="display: none" class="uploadSuccess">Картинка загружена. Используйте этот путь, что вставить картинку в текст: <strong><span class="imgUrl"></span></strong></p>
     </div>
 </div>
